ATLAS-3085: make sonar happier